--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+/* common */
 @import url('https://fonts.googleapis.com/css?family=Noto+Sans+KR&display=swap');
 body{ font-family: 'Noto Sans KR', sans-serif;}
 * { -webkit-text-size-adjust:none; max-width:100%; }
@@ -26,7 +27,7 @@ align-items: center;
 :root {
 --swiper-theme-color:#ffffff;
 }
-a {text-decoration:none; color:#333 !important; }
+a { color:#000; text-decoration:none !important;  }
 a:active, a:visited {text-decoration:none;}
 ul {list-style:none;}
 ul, li, p { margin: 0; padding: 0; }
@@ -35,12 +36,15 @@ table th, td {/* border: 1px solid #9e9e9e; */padding: 7px; color:#333;}
 .cursor_pointer { cursor: pointer; }
 .dw_1200px { width: 100%; max-width: 1200px; margin: 0 auto; text-align: center; }
 .dw_100p { width: 100%; margin: 0 auto; text-align: center; }
-section h2 { font-size: 32px; margin: 4% 0;}
-.nav_fix {
-    position: fixed;
-    width: 100%;
-    top: 0;
-}
+section h2 { font-size: 32px; margin: 4% 0; font-weight: 600; }
+.nav_fix { position: fixed; width: 100%; top: 0; }
+.P_btn 
+{ width: 100px; margin: 0 auto; background-color: #dddddd; margin-top: 20px; padding: 10px; background-color: rgb(243, 152, 0); border: 3px solid #f1c5ac;}    
+.P_btn::after { content: ' '; overflow: hidden; display: block; clear: both; }
+.P_btn i { float: right; color: #b33a00;}
+.P_btn p { float: left; font-weight: 600; margin-left: 10px; color: black; }
+.go_btn { width: 100px; background-color:#ff8d3c; padding: 3%; color: #404040; font-weight: 600; margin: 0 auto;}
+.cursor_pointer { cursor: pointer; }
 /* main_banner */
 .swiper-slide {
     -webkit-box-pack: center;
@@ -60,17 +64,27 @@ section h2 { font-size: 32px; margin: 4% 0;}
 .swiper-container .swiper-pagination-bullet.swiper-pagination-bullet-active { background-color: white; }
 
 /*header*/
-.wrap header h1 { width: 100%; max-width: 1200px; margin: 0 auto; margin-top: 2%; position: relative; margin-bottom: 10px; }
-.wrap header h1 img { width:12%; }
-.wrap header nav { position: absolute; right: 7%; top: 10%; }
-.wrap header .nav_wrap .nav_menu li { float: left; margin-right: 30px; font-size: 18px; }
-.wrap header .nav_wrap .nav_menu::after { content: ''; overflow: hidden; clear: both; display: block; }
-.wrap header .nav_wrap input, .wrap header .nav_wrap label,.wrap header .nav_wrap .nav_menu li i { display: none; }
+.wrap header { width: 100%; max-width: 1200px; margin: 0 auto; position: relative; }
+.wrap header h1 { width: 100%; max-width: 1200px; margin: 0 auto; margin-top: 2%; margin-bottom: 1%; }
+
+.wrap header nav { position: absolute; right: 0; top: 57%; max-width: 600px; width: 100%; }   
+.wrap header .h_wrap { width:100%; box-shadow: 0 10px 10px rgba(0, 0, 0, .2); z-index: 100;}
+
+
+.wrap header .menubar .nav_menu li { float: left; margin-right: 30px; font-size: 18px; }
+.wrap header .menubar .nav_menu::after { content: ''; overflow: hidden; clear: both; display: block; }
+.wrap header .menubar > label, header .menubar > input ,header .menubar .nav_menu li i { display: none; }
+
+/* aside */
+aside { position: fixed; bottom: 0; right: 3%; z-index: 500; margin-bottom: 10%; }
+.aside_wrap { width: 50px; height: 50px; position: relative; padding: 10px; background-color: #ff8d3c; }
+aside .top_btn { position: absolute; top: 50%; color: black; }
+aside .top_btn::after { content:''; width: 0; height: 0; position: absolute; bottom: 18px; left: 3px; border-top: 50px solid none; border-bottom: 15px solid red;
+    border-right: 10px solid transparent; border-left: 10px solid transparent; border-bottom-color:#000;}
 
 /* Business_Area */
-.content .B_Area,.content .P_Area { margin-bottom: 10%; }
+.content .B_Area,.content .P_Area { margin-bottom: 5%; }
 .content .B_Area .B_wrap ul li { float: left; width:47%; position: relative; overflow: hidden; display: inline-block; }
-
 .content .B_Area .B_wrap ul li:first-child { margin-right: 6%; }
 .content .B_Area .B_wrap ul li img::after {
     position: absolute;
@@ -84,13 +98,144 @@ section h2 { font-size: 32px; margin: 4% 0;}
     box-sizing: border-box;
 }
 .content .B_Area .B_wrap ul li img::after:hover { left: 0;}
-/* .content .B_Area .B_wrap ul li:first-child:hover {
-     background-color: rgba(255, 255, 255, 0.384); 
-    } */
 .content .B_Area .B_wrap ul::after { content: ''; display: block; overflow: hidden; clear: both; }
-.content .P_Area .P_wrap > div { float: left; width: 33%; }
+
+.content .P_Area .P_wrap > div { float: left; width: 31%; margin-right: 3%; border: 1px solid #dddddd; padding: 30px; }
+.content .P_Area .P_wrap > div:last-child { margin-right: 0; }
 .content .P_Area .P_wrap::after { content: ''; display: block; overflow: hidden; clear: both; }
-.content .A_Area { margin-bottom: 3%; overflow: hidden; }
+
+.content .A_Area { margin-bottom: 10%; overflow: hidden; }
 .content .A_Area .A_top img { margin-bottom: 3%; }
-.content .A_Area .A_top h3 { font-size: 24px; margin-bottom: 2%; }
-.content .A_Area .A_top p { font-size: 20px; margin-bottom: 6%; }
+.content .A_Area .A_top h3 { font-size: 24px; margin-bottom: 5%; color: rgb(243, 152, 0); font-weight: 600; }
+.content .A_Area .A_top p { font-size: 20px; margin-bottom: 6%; word-break: keep-all;}
+
+.content .N_Area { margin-bottom: 10%; background-color: #f0f0f0; padding: 5%; }
+.content .N_Area .N_contents ul li { float: left; width: 33%; }
+.content .N_Area .N_contents ul::after { content: ' '; display: block; overflow: hidden; clear: both; }
+.content .N_Area .N_contents ul li:first-child,.content .N_Area .N_contents ul li:nth-child(2) { border-right: 3px solid #ff8d3c; } 
+.content .N_Area .N_contents ul li:last-child { margin-right: 0; }
+.content .N_Area .N_contents ul li img { margin-bottom: 5%; }
+.content .N_Area .N_contents ul li > p:first-of-type { font-weight: 600; font-size: 20px; margin-bottom: 30px; }
+.content .N_Area .N_contents ul li > p:nth-last-of-type(2) { margin-bottom: 10px; }
+.content .N_Area .N_contents ul li > p:nth-of-type(3) { margin-bottom: 20px; }
+
+
+/* .content .N_Area .N_contents ul li p { font-size: 15px; text-align: left; word-break: keep-all;}
+.content .N_Area .N_contents ul li p:nth-child(2),.content .N_Area .N_contents ul li p:nth-child(3) { margin-bottom: 10px; }
+.content .N_Area .N_contents ul li p:first-child { margin-bottom: 15%; font-size: 24px; font-weight: 600; }
+.content .N_Area .N_contents ul li:last-child { margin-right: 0; }
+.content .N_Area .N_contents ul::after { content: ' '; display: block; overflow: hidden; clear: both; } */
+
+
+/* media */
+@media ( max-width: 992px) {
+    .m_bottom { margin-bottom: 5%; }
+    .wrap header { width: 100%; }
+    .wrap header nav { max-width: 60%; }
+    .wrap header .menubar .nav_menu li { font-size: 14px; max-width: 700px; }
+    .content .P_Area,.content .B_Area,.content .A_Area  { width: 90%; margin: 5% auto; }
+    .content .N_Area .N_contents ul li > p:first-of-type { font-size: 17px; }
+    .content .N_Area .N_contents ul li > p { font-size: 13px; }
+    .content .A_Area .A_top { width: 90%; margin: 0 auto; }
+    .content .A_Area .A_top p { font-size: 18px; }
+
+}
+@media ( max-width: 822px) { 
+    .wrap header nav { max-width: 66%;}
+}
+@media ( max-width: 768px) { /* 768이하에서는 Mobile_menu */
+    .wrap header nav { max-width: 95%;}
+    .wrap header .menubar label,.wrap header .menubar .nav_menu li i { display: block; z-index: 100; }
+    header h1 { text-align: center; }
+    header nav { max-width: 95%; }
+    header .menubar .menu-icon {
+        padding: 28px 20px;
+        position: fixed;
+        top: 2%;
+        left: 0;
+        cursor: pointer;
+        transition: all .35s;
+    }
+    header .menubar .menu-icon .nav-icon { background:rgb(243, 152, 0); display: block; height: 4.5px; width: 30px; position: relative; z-index: 400; }
+    header .menubar .menu-icon .nav-icon:before {
+        background: rgb(243, 152, 0);
+        content: " ";
+        display: block;
+        height: 100%;
+        width: 100%;
+        position: absolute;
+        top: 10px;
+    }
+
+    header .menubar .menu-icon .nav-icon:after {
+        background: rgb(243, 152, 0);
+        content: " ";
+        display: block;
+        height: 100%;
+        width: 100%;
+        position: absolute;
+        top: -10px;
+    }
+    header .menubar .nav_menu li i { display: block; }
+    header .menubar .menu-btn { display: none; }
+    header .menubar .menu-btn:checked ~ .menu-icon .nav-icon { background: transparent; }
+    header .menubar .menu-btn:checked ~ .menu-icon .nav-icon:before { transform: rotate(-45deg); top: 0; left: 40px; }
+    header .menubar .menu-btn:checked ~ .menu-icon .nav-icon:after { transform: rotate(45deg); top: 0; left: 40px; }
+    header nav .menubar .nav_menu {
+        width: 200px;
+        height: 100%;
+        background-color: white;
+        position: fixed;
+        top: 0;
+        right: -200px;
+        z-index: 300;
+    }
+    header .menubar .menu-btn:checked + label { z-index: 301; left: 145px; }
+    header .menubar .menu-btn:checked + label + .nav_menu { left: 0; padding-left: 4%; padding-top: 10%; box-sizing: border-box; }
+    header .menubar .menu-btn:checked + label + .nav_menu > li { margin: 20px; }
+    header .menubar .menu-btn:checked ~ .BG { position: fixed; left: 0; top: 0; width: 100%; height: 100%; background-color: rgba(22, 22, 22, 0.81); }
+
+    .content .B_Area .B_wrap ul { width: 90%; margin: 0 auto; }
+    .content .N_Area { padding: 2%; }
+    section h2 { font-size: 24px; }
+}
+@media ( max-width: 730px) {
+    .content .N_Area .N_contents ul li:first-child, .content .N_Area .N_contents ul li:nth-child(2) { border-right: 0; }
+    .content .N_Area .N_contents ul li:not(:last-child) { width: 100%; margin-bottom: 5%; }
+    .content .N_Area .N_contents ul li:last-child { width: 100%; }
+    .content .N_Area .N_contents ul li > p { font-size: 18px; }
+    .go_btn { padding: 1%; margin-bottom: 5%; }
+    .content .N_Area .N_contents ul li img { margin-bottom: 0; }
+    .content .N_Area { padding: 0 0; padding-bottom: 0; }
+    .content .N_Area .N_contents ul li:first-child { border-top: 3px solid #ff8d3c; padding-top: 5%; }
+    .content .N_Area .N_contents ul li { border-bottom: 3px solid #ff8d3c; } 
+
+    
+}
+@media ( max-width: 600px) {
+    .swiper-container .swiper-button-prev::after,.swiper-container > .swiper-button-next::after  { font-size: 50px; }
+    .content .B_Area .B_wrap ul li:first-child { margin-right: 0; margin-bottom: 10%; }
+    .content .B_Area .B_wrap ul li { width: 100%; }
+    .content .P_Area .P_wrap > div { width: 100%; margin-right: 0; margin-bottom: 5%; }
+    
+}
+@media ( max-width: 500px) { 
+    header h1 img { width: 30%; }
+    section h2 { font-size: 18px; }
+    
+
+    .content .A_Area .A_top { width: 80%; }
+    .content .A_Area .A_top img { width: 35%; }
+    .content .A_Area .A_top h3 { font-size: 18px; }
+    .content .A_Area .A_top p { font-size: 14px; }
+
+
+}
+@media ( max-width: 400px) {
+    .swiper-container .swiper-button-prev::after,.swiper-container > .swiper-button-next::after  { font-size: 40px; }
+}
+   
+
+   
+
+
