--- a/css/style.css
+++ b/css/style.css
@@ -1,100 +1,26 @@
-/* common */
-@import url('https://fonts.googleapis.com/css?family=Noto+Sans+KR&display=swap');
-body{ font-family: 'Noto Sans KR', sans-serif;}
-* { -webkit-text-size-adjust:none; max-width:100%; }
-
-/*swiper slider*/
-.swiper-container { width: 100%; height: 100%; }
-.swiper-slide {
-text-align: center;
-font-size: 18px;
-background: #fff;
-
-/* Center slide text vertically */
-display: -webkit-box;
-display: -ms-flexbox;
-display: -webkit-flex;
-display: flex;
--webkit-box-pack: center;
--ms-flex-pack: center;
--webkit-justify-content: center;
-justify-content: center;
--webkit-box-align: center;
--ms-flex-align: center;
--webkit-align-items: center;
-align-items: center;
-}
-:root {
---swiper-theme-color:#ffffff;
-}
-a,a:active, a:visited,a:hover, a:link, a:focus
- {text-decoration:none; color:#000; }
-
-a, 
-ul {list-style:none;}
-ul, li, p { margin: 0; padding: 0; }
-table { width:100%; /* border: 1px solid #9e9e9e; */ border-collapse: collapse;}
-table th, td {/* border: 1px solid #9e9e9e; */padding: 7px; color:#333;}
-.cursor_pointer { cursor: pointer; }
-.dw_1200px { width: 100%; max-width: 1200px; margin: 0 auto; text-align: center; }
-.dw_100p { width: 100%; margin: 0 auto; text-align: center; }
-section h2 { font-size: 32px; margin: 4% 0; font-weight: 600; }
-/* .nav_fix { position: fixed; width: 100%; top: 0; left:0; } */
-
-.nav_fix {
-    position: fixed;
-    width: 100%;
-    top: 0;
-    margin-top: 1%;
-    background-color: white;
-    box-shadow: 0 10px 10px rgba(0, 0, 0, .2);
-}
-.P_btn 
-{ width: 100px; margin: 0 auto; background-color: #dddddd; margin-top: 20px; padding: 10px; background-color: rgb(243, 152, 0); border: 3px solid #f1c5ac;}    
-.P_btn::after { content: ' '; overflow: hidden; display: block; clear: both; }
-.P_btn i { float: right; color: #b33a00;}
-.P_btn p { float: left; font-weight: 600; margin-left: 10px; color: black; }
-.go_btn { width: 100px; background-color:#ff8d3c; padding: 3%; color: #404040; font-weight: 600; margin: 0 auto;}
-.cursor_pointer { cursor: pointer; }
-/* main_banner */
-.swiper-slide {
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
-    -webkit-justify-content: center;
-    justify-content: center;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    -webkit-align-items: center;
-    align-items: center;
-}
-.swiper-container > .swiper-wrapper .swiper-slide a img { width: 100%; height: 100%; }
-.swiper-container > .swiper-button-next { color: white; position: absolute; right: 10%; }
-.swiper-container > .swiper-button-next::after { font-size: 80px; }
-.swiper-container .swiper-button-prev { color: white; position: absolute; left: 10%; }
-.swiper-container .swiper-button-prev::after { font-size: 80px; }
-.swiper-container .swiper-pagination-bullet.swiper-pagination-bullet-active { background-color: white; }
 
 /*header*/
-.wrap .h_wrap { position: relative;}
-.wrap header { width: 100%;  margin: 0 auto;  z-index: 500;  }
+.wrap { width:100%; overflow:hidden;}
+.wrap .h_wrap { /* position: relative; */ width:100%; overflow:hidden;  z-index: 500; }
+.wrap header { width: 100%;  margin: 0 auto; position: relative;  max-width: 1200px; }
 .wrap header h1 { width: 100%; margin: 0 auto; margin-top: 1%; margin-bottom: 1%; max-width: 1200px; }
 .wrap header h1 img { width: 14%; }
-.wrap header nav { position: absolute; right: 2%; top: 60%; max-width: 600px; width: 100%; }   
+.wrap header nav { position: absolute; right: 2%; top: 60%; }   
 .wrap header .menubar .nav_menu li { float: left; margin-right: 30px; font-size: 18px; }
+.wrap header .menubar .nav_menu li a:hover { color:#ff8d3c; }
 .wrap header .menubar .nav_menu::after { content: ''; overflow: hidden; clear: both; display: block; }
 .wrap header .menubar > label, header .menubar > input ,header .menubar .nav_menu li i { display: none; }
 
-
-
 /* aside */
-aside { position: fixed; bottom: 0; right: 3%; z-index: 500; margin-bottom: 10%; }
+aside { position: fixed; bottom: 22%; right: 3%; z-index: 500; }
 .aside_wrap { width: 50px; height: 50px; position: relative; padding: 10px; background-color: #ff8d3c; }
 aside .top_btn { position: absolute; top: 50%; color: black; }
 aside .top_btn::after { content:''; width: 0; height: 0; position: absolute; bottom: 18px; left: 3px; border-top: 50px solid none; border-bottom: 15px solid red;
-    border-right: 10px solid transparent; border-left: 10px solid transparent; border-bottom-color:#000;}
+border-right: 10px solid transparent; border-left: 10px solid transparent; border-bottom-color:#000;}
 
-/* Business_Area */
-.content .B_Area,.content .P_Area { margin-bottom: 5%; }
+/* B_Area */
+.wrap .content { position: relative; width:100%; overflow:hidden;}
+.content .B_Area { margin-bottom: 5%; margin-top: 5%; }
 .content .B_Area .B_wrap ul li { float: left; width:47%; position: relative; overflow: hidden; display: inline-block; }
 .content .B_Area .B_wrap ul li:first-child { margin-right: 6%; }
 .content .B_Area .B_wrap ul li img::after {
@@ -111,16 +37,20 @@ aside .top_btn::after { content:''; width: 0; height: 0; position: absolute; bot
 .content .B_Area .B_wrap ul li img::after:hover { left: 0;}
 .content .B_Area .B_wrap ul::after { content: ''; display: block; overflow: hidden; clear: both; }
 
+/* P_Area */
+.content .P_Area { margin-bottom: 3%; }
 .content .P_Area .P_wrap > div { float: left; width: 31%; margin-right: 3%; border: 1px solid #dddddd; padding: 30px; }
 .content .P_Area .P_wrap > div:last-child { margin-right: 0; }
 .content .P_Area .P_wrap::after { content: ''; display: block; overflow: hidden; clear: both; }
 
-.content .A_Area { margin-bottom: 10%; overflow: hidden; }
+/* A_Area */
+.content .A_Area { overflow: hidden; }
 .content .A_Area .A_top img { margin-bottom: 3%; }
-.content .A_Area .A_top h3 { font-size: 24px; margin-bottom: 5%; color: rgb(243, 152, 0); font-weight: 600; }
+.content .A_Area .A_top h3 { font-size: 24px; margin-bottom: 2%; color: rgb(243, 152, 0); font-weight: 600; }
 .content .A_Area .A_top p { font-size: 20px; margin-bottom: 6%; word-break: keep-all;}
 
-.content .N_Area { margin-bottom: 10%; background-color: #f0f0f0; padding: 5%; }
+/* N_Area */
+.content .N_Area { background-color: #f0f0f0; padding: 3%; margin-top: 5%; }
 .content .N_Area .N_contents ul li { float: left; width: 33%; }
 .content .N_Area .N_contents ul::after { content: ' '; display: block; overflow: hidden; clear: both; }
 .content .N_Area .N_contents ul li:first-child,.content .N_Area .N_contents ul li:nth-child(2) { border-right: 3px solid #ff8d3c; } 
@@ -130,48 +60,79 @@ aside .top_btn::after { content:''; width: 0; height: 0; position: absolute; bot
 .content .N_Area .N_contents ul li > p:nth-last-of-type(2) { margin-bottom: 10px; }
 .content .N_Area .N_contents ul li > p:nth-of-type(3) { margin-bottom: 20px; }
 
+/*footer*/
+footer { overflow: hidden; }
+.wrap .ft_wrap { position: relative; width:100%; overflow:hidden; }
+.ft_wrap { background-color: #dadada; color: #000;}
+.ft_wrap .f_top { background-color: #d2d2d2; padding: 1%; }
+.ft_wrap .f_top ul { margin-bottom: 2%; width: 100%; margin: 0 auto; max-width: 1200px; text-align: center;  }
+.ft_wrap .f_top ul li {  color: #000; border-right: 1px solid #8e8e8e; } 
+.ft_wrap .f_top ul li:last-child { border-right: 0; }
+.ft_wrap .f_top ul::after { content: ''; display: block; overflow: hidden; clear: both; }
+.ft_wrap .f_bottom { max-width: 1200px; margin: 2% auto; }
+.ft_wrap .f_bottom .f_text .f_logo { float: left; }
+.ft_wrap .f_bottom .f_text::after { content: ' '; display: block; overflow: hidden; clear: both; }
+.ft_wrap .f_bottom .f_text strong { font-weight: 600; }
 
-/* .content .N_Area .N_contents ul li p { font-size: 15px; text-align: left; word-break: keep-all;}
-.content .N_Area .N_contents ul li p:nth-child(2),.content .N_Area .N_contents ul li p:nth-child(3) { margin-bottom: 10px; }
-.content .N_Area .N_contents ul li p:first-child { margin-bottom: 15%; font-size: 24px; font-weight: 600; }
-.content .N_Area .N_contents ul li:last-child { margin-right: 0; }
-.content .N_Area .N_contents ul::after { content: ' '; display: block; overflow: hidden; clear: both; } */
+.ft_wrap .f_bottom .f_text::after { content: ''; display: block; overflow: hidden; clear: both; }
+.ft_wrap .f_bottom .f_text ul li { margin-bottom: 10px; }
+.ft_wrap .f_bottom .f_text ul:first-child { margin: 0 6%; margin-top: 10px; text-align: left; }
+.ft_wrap .f_bottom .f_text ul:last-child { font-size: 14px; text-align: end; }
+.ft_wrap .f_bottom .f_text ul:last-child li:first-child { font-size: 20px; font-weight: 600; }
+.ft_wrap .f_bottom .f_text ul:last-child li:nth-child(2) { font-weight: 600; }
 
+.menubar { width:100%; overflow:hidden; }
+
+/* content.html style */
+.content .c_top h2 { font-size: 22px; text-align: left; margin: 30px; font-weight: 600; margin-bottom: 7%; }
+.content .c_menu { margin: 3% auto; width: 100%; max-width: 1200px; }
+.content .c_menu ul li { float: left; margin-right: 10px;  background-color: #ffba36; padding: 2%;  }
+/* border-top: 2px solid rgb(243, 152, 0); */
+.content .c_menu ul li:first-child { margin-left: 2%; }
+/* .content .c_menu ul li:last-child { margin-right: 0; } */
+.content .c_menu ul::after { content: ''; display: block; overflow: hidden; clear: both; }
+.h_border { border-bottom: 1px solid #ddd; margin-bottom: 2%; }
 
 /* media */
 @media ( max-width: 1200px) {
-    .wrap header { width: 90%; }
+    .wrap header h1 { width: 90%; }
+    .wrap .content .B_Area,.wrap .content .P_Area { width: 95%; margin: 0 auto; }
+    .A_top { margin-top: 5%; }
+
 }
 @media ( max-width: 992px) {
     .m_bottom { margin-bottom: 5%; }
-    .wrap header { width: 80%; }
     .wrap header nav { max-width: 500px; }
-    .wrap header h1 { margin-top: 2%;}
     .wrap header .menubar .nav_menu li { font-size: 14px; max-width: 700px; }
     .content .P_Area,.content .B_Area,.content .A_Area  { width: 90%; margin: 5% auto; }
     .content .N_Area .N_contents ul li > p:first-of-type { font-size: 17px; }
     .content .N_Area .N_contents ul li > p { font-size: 13px; }
     .content .A_Area .A_top { width: 90%; margin: 0 auto; }
     .content .A_Area .A_top p { font-size: 18px; }
+    .content .P_Area .P_wrap > div { width: 47%; }
+    .content .P_Area .P_wrap .P_dr { width: 47%; margin: 6% 0 0 24%; }
+    .content .P_Area .P_wrap .P_recover { margin-right: 0; }
+    .content .P_Area .P_wrap > div { margin-right: 6%; }
+
+    .ft_wrap .f_bottom { font-size: 13px; }
+    .ft_wrap .f_bottom .f_text ul:last-child li:first-child { font-size: 14px; }
+    .ft_wrap .f_bottom .f_text ul:last-child { font-size: 13px; }
 
 }
-@media ( max-width: 822px) { 
-    .wrap header nav { max-width: 66%;}
-}
-@media ( max-width: 768px) { /* 768이하에서는 Mobile_menu */
-    
-    .wrap header h1 img { width: 25%; }
+/* 768이하에서는 Mobile_menu */
+@media ( max-width: 768px) { 
+    /* body { padding-top: 80px; } */
+    .wrap header { min-height: 75px; }
+    .ft_wrap .f_top ul { padding: 1%;}
+    .wrap header h1 img { width: 150px; }
     .wrap header nav { max-width: 95%;}
     .wrap header .menubar label,.wrap header .menubar .nav_menu li i { display: block; z-index: 100; }
     header h1 { text-align: center; }
     header nav { max-width: 95%; }
-    /* header h1 a {
-        margin: 20px auto;
-    } */
     header .menubar .menu-icon {
         padding: 28px 20px;
         position: fixed;
-        top: 2%;
+        top: 13px;
         left: 0;
         cursor: pointer;
         transition: all .35s;
@@ -218,8 +179,16 @@ aside .top_btn::after { content:''; width: 0; height: 0; position: absolute; bot
     .content .B_Area .B_wrap ul { width: 90%; margin: 0 auto; }
     .content .N_Area { padding: 2%; }
     section h2 { font-size: 24px; }
-}
-@media ( max-width: 730px) {
+
+    .content .A_Area .A_top h3 { margin-bottom: 5%; }
+
+    .content .B_Area .B_wrap ul li:first-child { margin-right: 0; margin-bottom: 10%; }
+    .content .B_Area .B_wrap ul li { width: 100%; }
+    .content .P_Area .P_wrap > div { width: 100%; margin-right: 0; margin-bottom: 5%; }
+    .content .P_Area .P_wrap .P_dr { width: 100%; margin: 0; }
+
+    .content .P_wrap { width: 70%; margin: 0 auto; }
+
     .content .N_Area .N_contents ul li:first-child, .content .N_Area .N_contents ul li:nth-child(2) { border-right: 0; }
     .content .N_Area .N_contents ul li:not(:last-child) { width: 100%; margin-bottom: 5%; }
     .content .N_Area .N_contents ul li:last-child { width: 100%; }
@@ -229,30 +198,35 @@ aside .top_btn::after { content:''; width: 0; height: 0; position: absolute; bot
     .content .N_Area { padding: 0 0; padding-bottom: 0; }
     .content .N_Area .N_contents ul li:first-child { border-top: 3px solid #ff8d3c; padding-top: 5%; }
     .content .N_Area .N_contents ul li { border-bottom: 3px solid #ff8d3c; } 
+    .content .N_Area .N_contents ul li:last-child { border-bottom: none; }
 
-    
+    .ft_wrap .f_top ul li { font-size: 13px; }
+    .ft_wrap .f_bottom,.ft_wrap .f_bottom .f_text ul:last-child { text-align: center; }
+    .ft_wrap .f_bottom .f_text .f_logo { margin: 20px 0; }
+    .ft_wrap .f_bottom .f_text ul:last-child  { margin-top: 20px; }
+
 }
+
 @media ( max-width: 600px) {
     .swiper-container .swiper-button-prev::after,.swiper-container > .swiper-button-next::after  { font-size: 50px; }
-    .content .B_Area .B_wrap ul li:first-child { margin-right: 0; margin-bottom: 10%; }
-    .content .B_Area .B_wrap ul li { width: 100%; }
-    .content .P_Area .P_wrap > div { width: 100%; margin-right: 0; margin-bottom: 5%; }
-    
 }
-@media ( max-width: 500px) { 
-    header h1 img { width: 30%; }
-    section h2 { font-size: 18px; }
-    
 
+@media ( max-width: 500px) { 
+
+    header h1 img { width: 30%; }
+    section h2 { font-size: 18px; margin: 7% 0; }
+    .content .A_Area { margin: 7% auto; }
     .content .A_Area .A_top { width: 80%; }
     .content .A_Area .A_top img { width: 35%; }
     .content .A_Area .A_top h3 { font-size: 18px; }
     .content .A_Area .A_top p { font-size: 14px; }
-
-
+    
 }
 @media ( max-width: 400px) {
     .swiper-container .swiper-button-prev::after,.swiper-container > .swiper-button-next::after  { font-size: 40px; }
+    .wrap header h1 img { width: 130px; margin-top: 10px; }
+    header .menubar .menu-icon { top: 10px; }
+    .wrap header h1 { margin-top: 0; }
 }
    
 
